Fixed z-index problem with chosen drop-down not appearing on-top of the accordion tab below
--HG--
branch : attach-to-post-interface

--- a/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/attach_to_post.css
@@ -29,6 +29,10 @@ iframe {
 	background: transparent;
 }
 
+#source_tab_content {
+	overflow: visible;
+}
+
 /** Would would you like to display tab? **/
 #source_configuration td{
 	vertical-align: top;
